[tool.poetry]
name = "python-styleguide"
version = "0.1.0"
description = ""
authors = ["Exasol <opensource@exasol.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
sphinx-copybutton = "^0.5.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.5.0"
furo = "^2022.3.4"
nox = "^2022.1.7"
black = "^22.3.0"
isort = "^5.10.1"
sphinx-copybutton = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
