[tool.poetry]
name = "python-styleguide"
version = "0.1.0"
description = ""
authors = ["Exasol <opensource@exasol.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
Sphinx = "^7.1.2"
furo = "^2023.9.10"
nox = "^2023.4.22"
black = "^23.10.1"
isort = "^5.10.1"
sphinx-copybutton = "^0.5.0"
sphinx-inline-tabs = "^2023.4.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
